--- a/#src/scss/vars.scss
+++ b/#src/scss/vars.scss
@@ -1,7 +1,3 @@
-// screen sizes ---------------
-$maxWidth: 1606;
-
-
 // z-index --------------------
 $ui-index-1: 1;	//для наползающих элементов в потоке
 $ui-index-2: 2;	//для наползающих элементов в потоке
@@ -12,7 +8,7 @@ $ui-index-6: 6;	//дял элементов, перекрывающих все
 
 
 // FONTS ----------------------
-// шрифт с google fonts
+// шрифт с google fonts ЛУЧШЕ ПОДКЛЮЧАТЬ ЧЕРЕЗ LINK? ЧТОБЫ ШРИФТ КЭШИРОВАЛСЯ
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap");
 
 // font-family
@@ -37,19 +33,6 @@ $optional-f-color: #c4c4c4;
 $optional-f-hover-color: #495057;
 $optional-f-active-color: #495057;
 
-@mixin adaptive-font($pcSize, $mobSize) {
-	$addSize: $pcSize - $mobSize;
-	$addMobSize: $addSize + $addSize * 0.7;
-	@media (max-width: 767px) {
-		font-size: calc(#{$mobSize + px} + #{$addMobSize}* ((100vw- 320px) / #{$maxWidth}));
-	}
-	@media (min-width: 767px) {
-		font-size: calc(#{$mobSize + px} + #{$addSize} * (100vw / #{$maxWidth}));
-	}
-}
-// @include adaptive-font(40, 25);
-
-
 // bgc colors------------------------------
 $main-bgc-color: #000;
 $secondary-bgc-color: #fff;
@@ -66,37 +49,7 @@ $product-secondary-f-color:  #fff;
 // about product page btn color
 $product-btn-bgc-color: #000;
 
-// ui step --------------------------------
-// адекватные дизайнеры задают размеры на основе системы шагов
-$ui-step: 4px;
-
-@mixin ui-space($direction, $size) {
-	@if ($direction == top) {
-		margin-top: $ui-step * $size;
-	}
-
-	@if ($direction == bottom) {
-		margin-bottom: $ui-step * $size;
-	}
-
-	@if ($direction == left) {
-		margin-left: $ui-step * $size;
-	}
-
-	@if ($direction == right) {
-		margin-right: $ui-step * $size;
-	}
-}
-// .element {
-// 	// это отступ в 8 пикселей сверзу
-	// @include ui-space(top, 2);	
-
-// 	// это 40 px (миксин-множитель)
-	// height: $ui-step * 10;
-// }
-
-
-// hover на мобилках --------------------------
+// hover на мобилках -----------------------------
 $mouse-device: '(hover: hover) and (pointer: fine)';
 // .button {
 // 	background-color: red;
@@ -109,8 +62,15 @@ $mouse-device: '(hover: hover) and (pointer: fine)';
 // }
 $touch-device: '(hover: none) and (pointer: coarse)';
 
-// breakpoints -----------------------------------------------
 
+
+// ui step -----------------------------------
+// дизайнеры задают размеры на основе системы шагов
+$ui-step: 4px;
+
+// breakpoints -----------------------------------------------
+// screen sizes ---------------
+$maxWidth: 1606;
 /* PC */
 @media (max-width: 1306px) {
 }
