@mixin ui-space  now have func "all"

--- a/#src/scss/mixins.scss
+++ b/#src/scss/mixins.scss
@@ -1,9 +1,7 @@
 @import "./vars.scss";
 // это может быть полезно, чтобы не задавать $ui-step и $maxWidth в этом файле
 
-
-
-// =============================================  СТИЛИЗАЦИЯ ПРОКРУТКИ ============================================= 
+// =============================================  СТИЛИЗАЦИЯ ПРОКРУТКИ =============================================
 @mixin scrollbar($scrollbar-width, $thumb-color, $track-color) {
 	&::-webkit-scrollbar {
 		width: #{$scrollbar-width} + px;
@@ -35,9 +33,7 @@
 // 	@include scrollbar(12, lighten($primary, 25), $gray500);
 // }
 
-
-
-// =============================================  ОТСУПЫ ПО ДИЗАЙНЕРСКОМУ ШАГУ ============================================= 
+// =============================================  ОТСУПЫ ПО ДИЗАЙНЕРСКОМУ ШАГУ =============================================
 // ui step --------------------------------
 // дизайнеры задают размеры на основе системы шагов
 $ui-step: 4px;
@@ -59,6 +55,9 @@ $ui-step: 4px;
 		@if ($side == right) {
 			margin-right: $ui-step * $size;
 		}
+		@if ($direction == all) {
+			margin: $ui-step * $size;
+		}
 	}
 }
 // .element {
@@ -70,9 +69,7 @@ $ui-step: 4px;
 // 	@include ui-space((top, bottom), 2);
 // }
 
-
-
-// =============================================  АДАПТИВНЫЙ ШРИФТ ============================================= 
+// =============================================  АДАПТИВНЫЙ ШРИФТ =============================================
 $maxWidth: 1280; // ширина полотна по макету
 
 @mixin adaptive-font($pcSize, $mobSize) {
@@ -87,9 +84,7 @@ $maxWidth: 1280; // ширина полотна по макету
 }
 // @include adaptive-font(40, 25);
 
-
-
-// ============================================= ПРОЗРАЧНОСТЬ ЭЛЕМЕНТА ============================================= 
+// ============================================= ПРОЗРАЧНОСТЬ ЭЛЕМЕНТА =============================================
 @mixin ui-opacity($value) {
 	$opacity-step: 1 / 10; // Локальная переменная $opacity-step	// $opacity-step: 0.1;
 
