--- a/#src/scss/mixins.scss
+++ b/#src/scss/mixins.scss
@@ -75,14 +75,28 @@ $maxWidth: 1280; // ширина полотна по макету
 @mixin adaptive-font($pcSize, $mobSize) {
 	$addSize: $pcSize - $mobSize;
 	$addMobSize: $addSize + $addSize * 0.7;
+
 	@media (max-width: 767px) {
-		font-size: calc(#{$mobSize + px} + #{$addMobSize}* ((100vw- 320px) / #{$maxWidth}));
+		font-size: calc(#{$mobSize + px} + #{$addMobSize} * ((100vw - 320px) / (#{$maxWidth} - 320)));
 	}
-	@media (min-width: 767px) {
+
+	@media (min-width: 768px) {
 		font-size: calc(#{$mobSize + px} + #{$addSize} * (100vw / #{$maxWidth}));
 	}
 }
+
 // @include adaptive-font(40, 25);
+
+// @mixin adaptive-font($pcSize, $mobSize) {
+// 	$addSize: $pcSize - $mobSize;
+// 	$addMobSize: $addSize + $addSize * 0.7;
+// 	@media (max-width: 767px) {
+// 		font-size: calc(#{$mobSize + px} + #{$addMobSize}* ((100vw- 320px) / #{$maxWidth}));
+// 	}
+// 	@media (min-width: 767px) {
+// 		font-size: calc(#{$mobSize + px} + #{$addSize} * (100vw / #{$maxWidth}));
+// 	}
+// }
 
 // ============================================= ПРОЗРАЧНОСТЬ ЭЛЕМЕНТА =============================================
 @mixin ui-opacity($value) {
